--- a/css/_tech-stack.scss
+++ b/css/_tech-stack.scss
@@ -26,7 +26,7 @@
     background: linear-gradient(to right, rgba(255, 255, 255, 0.04), transparent 40%);
        background-color: var(--card-bg);
     border-radius: 20px;
-    margin-bottom: 2rem;
+    // margin-bottom: 2rem;
     padding: 2rem 2rem 1.5rem 2rem;
     display: flex;
     flex-direction: column;
@@ -63,8 +63,8 @@
 
 .tech-flex3 {
     display: flex;
-    flex-wrap: wrap;
     gap: 2rem;
+    flex-wrap: wrap;
     justify-content: center;
 
 }
